--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -1,24 +1,35 @@
-- name: Xiangyu Zhao
-  photo: xiangyu.png
-  info: Assistant Professor
-  email: xianzhao@cityu.edu.hk
-  number_educ: 3
-  education1: BEng (University of Electronic Science and Technology of China)
-  education2: MSc (University of Science and Technology of China)
-  education3: PhD (Michigan State University)
-- name: Xiangyu Zhao
-  photo: xiangyu.png
-  info: Assistant Professor
-  email: xianzhao@cityu.edu.hk
-  number_educ: 3
-  education1: BEng (University of Electronic Science and Technology of China)
-  education2: MSc (University of Science and Technology of China)
-  education3: PhD (Michigan State University)
-- name: Xiangyu Zhao
-  photo: xiangyu.png
-  info: Assistant Professor
-  email: xianzhao@cityu.edu.hk
-  number_educ: 3
-  education1: BEng (University of Electronic Science and Technology of China)
-  education2: MSc (University of Science and Technology of China)
-  education3: PhD (Michigan State University)
+- name: Kesen Zhao
+  photo:
+  info: MS 2021-2022, next position - PhD at UdeM
+  email: kesenzhao2-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Weilin Lin
+  photo:
+  info: MS 2021-2022, next position - HKUST GZ
+  email: wllin9-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Zhiwei Hu
+  photo:
+  info:
+  email:
+  number_educ: 0
+- name: Ze Huang
+  photo:
+  info:
+  email:
+  number_educ: 0
+- name: Jiahao Liang
+  photo:
+  info:
+  email: jiahliang6-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Xinxin Gong
+  photo:
+  info: MS 2021-2022, next position - Huawei
+  email:
+  number_educ: 0
+- name: Jiahao Dong
+  photo:
+  info:
+  email:
+  number_educ: 0
