--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -1,35 +1,35 @@
 - name: Kesen Zhao
-  photo:
+  photo: kesenzhao.jpg
   info: MS 2021-2022, next position - PhD at UdeM
   email: kesenzhao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weilin Lin
-  photo:
+  photo: weilinlin.jpg
   info: MS 2021-2022, next position - HKUST GZ
   email: wllin9-c@my.cityu.edu.hk
   number_educ: 0
 - name: Zhiwei Hu
-  photo:
+  photo: zhiweihu.jpg
   info:
   email:
   number_educ: 0
 - name: Ze Huang
-  photo:
+  photo: zehuang.jpg
   info:
   email:
   number_educ: 0
 - name: Jiahao Liang
-  photo:
+  photo: jiahaoliang.jpg
   info:
   email: jiahliang6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Xinxin Gong
-  photo:
+  photo: xinxingong.jpg
   info: MS 2021-2022, next position - Huawei
   email:
   number_educ: 0
 - name: Jiahao Dong
-  photo:
+  photo: jiahaodong.jpg
   info:
   email:
   number_educ: 0
