--- a/_data/phd20.yml
+++ b/_data/phd20.yml
@@ -1,10 +1,10 @@
 - name: Ziru Liu
-  photo:
+  photo: ziruliu.jpg
   info: PhD with USYD, Prof Dingxuan Zhou
   email: ziruliu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Langming Liu
-  photo:
+  photo: langmingliu.jpg
   info: PhD with USYD, Prof Dingxuan Zhou
   email: langmiliu2-c@my.cityu.edu.hk
   number_educ: 0
