--- a/_data/phd21.yml
+++ b/_data/phd21.yml
@@ -1,25 +1,25 @@
 - name: Maolin Wang
-  photo:
+  photo: maolinwang.jpg
   info: PhD with CUHK, Prof Junhui Wang, and Dr Ruocheng Guo
   email: Morin.wang@my.cityu.edu.hk
   number_educ: 0
 - name: Xiao Han
-  photo:
+  photo: xiaohan.jpg
   info: PhD with USYD, Prof Dingxuan Zhou
   email: xhan49-c@my.cityu.edu.hk
   number_educ: 0
 - name: Zijian Zhang
-  photo:
+  photo: zijianzhang.jpg
   info: PhD joint with JLU, Prof Hongwei Zhao
   email: zijian.zhang@my.cityu.edu.hk
   number_educ: 0
 - name: Wei Ni
-  photo:
+  photo: weini.jpg
   info: PhD joint with ZJU, Prof Xiaoye Miao
   email: 12121061@zju.edu.cn
   number_educ: 0
 - name: Qidong Liu
-  photo:
+  photo: qidongliu.jpg
   info: PhD joint with XJTU, Prof Feng Tian
   email: qidongliu2-c@my.cityu.edu.hk
   number_educ: 0
