--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -1,35 +1,35 @@
 - name: Chengxi Li
-  photo:
+  photo: chengxili.jpg
   info:
   email: chengxli5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaxi Hu
-  photo:
+  photo: jiaxihu.jpg
   info:
   email: jiaxihu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yutian Xiao
-  photo:
+  photo: yutianxiao.jpg
   info:
   email: yutiaxiao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Tong Wu
-  photo:
+  photo: tongwu.jpg
   info:
   email: twu274-c@my.cityu.edu.hk
   number_educ: 0
 - name: Qian Ma
-  photo:
+  photo: qianma.jpg
   info:
   email: qma233-c@my.cityu.edu.hk
   number_educ: 0
 - name: Kecheng Chen
-  photo:
+  photo: kechengchen.jpg
   info:
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaocong Wang
-  photo:
+  photo: jiaocongwang.jpg
   info:
   email: jiaocwang2-c@my.cityu.edu.hk
   number_educ: 0
