--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,4 @@
--- date: 25. Oct 2022
+- date: 25. Oct 2022
   headline: "Welcome ！ — <b> our lab website is officially starting</b>!"
 
 - date: 24. Sep 2022
