--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 25. Oct 2022
-  headline: "Welcome ！ — <b> our lab website is officially starting</b>!"
+  headline: "<b>Welcome ！ — our lab website is officially starting</b>!"
 
 - date: 24. Sep 2022
   headline: "Welcome to our latest <a href='https://mp.weixin.qq.com/s/3Qu335pTzY8VqRHkTDfJtg'>survey of trustworthy recommender systems</a> in collaboration with the PolyU, MSU, and UST teams."
