--- a/_data/advisors.yml
+++ b/_data/advisors.yml
@@ -1,5 +1,5 @@
 - name: Xiangyu Zhao
-  photo: xiangyu.png
+  photo: xiangyuzhao.png
   info: Assistant Professor
   email: xianzhao@cityu.edu.hk
   number_educ: 0
