--- a/_data/phd20.yml
+++ b/_data/phd20.yml
@@ -1,10 +1,12 @@
 - name: Ziru Liu
   photo: ziruliu.jpg
-  info: PhD with USYD, Prof Dingxuan Zhou
+  info: Join our lab in 2022
   email: ziruliu2-c@my.cityu.edu.hk
-  number_educ: 0
+  number_educ: 1
+  education1: PhD with USYD, Prof Dingxuan Zhou
 - name: Langming Liu
   photo: langmingliu.jpg
-  info: PhD with USYD, Prof Dingxuan Zhou
+  info: Join our lab in 2022
   email: langmiliu2-c@my.cityu.edu.hk
-  number_educ: 0
+  number_educ: 1
+  education1: PhD with USYD, Prof Dingxuan Zhou
