--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -23,4 +23,4 @@
   info: Join our lab in 2022
   email: yuanshzhu2-c@my.cityu.edu.hk
   number_educ: 1
-  education1: PhD joint with SusTech, Prof Jianqiao Yu
+  education1: PhD joint with SusTech, Prof James J.Q. Yu
