--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -38,8 +38,8 @@
   info: MS at ZJUT, with Prof Qi Xuan
   email: jjzhou1202@gmail.com
   number_educ: 0
-- name: Yan Yang
-  photo: yanyang.jpg
+- name: Yan Zhang
+  photo: yanzhang.jpg
   info: MS at ZJUT, with Prof Guojiang Shen
   email:
   number_educ: 0
