--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,20 +1,20 @@
-- date: 25. Oct 2022
+- date: 25 Oct 2022
   headline: "<b>Welcome ！ — our lab website is officially starting</b>!"
 
-- date: 24. Sep 2022
+- date: 24 Sep 2022
   headline: "Welcome to our latest <a href='https://mp.weixin.qq.com/s/3Qu335pTzY8VqRHkTDfJtg'>survey of trustworthy recommender systems</a> in collaboration with the PolyU, MSU, and UST teams."
 
-- date: 03. Aug 2022
+- date: 03 Aug 2022
   headline: "Four of our CIKM2022 submissions have been included. Congratulations to pengfei, haochen, kesen, muyang, zijian, chi and xinhang! 
   (Link: <a href='https://dl.acm.org/doi/abs/10.1145/3511808.3557130?casa_token=cBWVGywuCckAAAAA:v5PK_lO-ol-SzIAgZozMSrggHzZU6zTItUlCvQ757scDGcPKg_jHVPF6DPdtquTuU9NMdYWeKYNkY3c'>[1]</a>, 
   <a href='https://dl.acm.org/doi/abs/10.1145/3511808.3557461?casa_token=G3_WIMtUZ_IAAAAA:qxLYXSWrsva8vY8eRpwpdJaheTUo-ehW5IPrJOm_20XPNqfWdvumaQQDGJLwiX6DxwhPQ4QEncEbry4'>[2]</a>, 
   <a href='https://dl.acm.org/doi/abs/10.1145/3511808.3557338'>[3]</a>,
   <a href='https://dl.acm.org/doi/abs/10.1145/3511808.3557348?casa_token=1t84nQCu2nAAAAAA:H8v2DBEJNUVGxdr1c_O-pax3ZehozsSuGjYpS5Xaxh6PkqTxNgqKaVurBLzbmRpAjI7fEFQYy1_kMck'>[4]</a>)"
 
-- date: 15. Jul 2022
+- date: 15 Jul 2022
   headline: "Welcome to our <a href='https://rentmultimedia.zoom.us/j/87220206444'>3rd Workshop on Deep Reinforcement Learning for Information Retrieval</a>."
 
-- date: 19. May 2022
+- date: 19 May 2022
   headline: "Three of our members' KDD submissions have been included. Congratulations to weilin, yejing and zhengzhi! 
   (Link: <a href='https://dl.acm.org/doi/abs/10.1145/3534678.3539204?casa_token=NzySH1Saca4AAAAA:ARwZossDmCaf__icJSnbhoJtU80lVhNGxnGD-kNCryLo4AvJPheAO4aZ50NWplVRnHTplC9aYCwvnxs'>[1]</a>, 
   <a href='https://dl.acm.org/doi/abs/10.1145/3534678.3539201?casa_token=2hez5xDVzqgAAAAA:9TmCGk5yhMxgnuqbnGWuktIY_jwsP9ZC3VAn5HdUR-97mnbaK7b_Dg_ErXA_uUSO3GoCIzm5UeCAnQQ'>[2]</a>, 
