--- a/_data/phd21.yml
+++ b/_data/phd21.yml
@@ -3,28 +3,28 @@
   info: Join our lab in 2022
   email: Morin.wang@my.cityu.edu.hk
   number_educ: 1
-  education1: PhD with CUHK, Prof Junhui Wang, and Dr Ruocheng Guo
+  education1: with Prof Junhui Wang (CUHK), and Dr Ruocheng Guo
 - name: Xiao Han
   photo: xiaohan.jpg
   info: Join our lab in 2022
   email: xhan49-c@my.cityu.edu.hk
   number_educ: 1
-  education1: PhD with USYD, Prof Dingxuan Zhou
+  education1: with Prof Dingxuan Zhou (USYD)
 - name: Zijian Zhang
   photo: zijianzhang.jpg
   info: Join our lab in 2022
   email: zijian.zhang@my.cityu.edu.hk
   number_educ: 1
-  education1: PhD joint with JLU, Prof Hongwei Zhao
+  education1: Joint-PhD with JLU, Prof Hongwei Zhao
 - name: Wei Ni
   photo: weini.jpg
   info: Join our lab in 2022
   email: 12121061@zju.edu.cn
   number_educ: 1
-  education1: PhD joint with ZJU, Prof Xiaoye Miao
+  education1: Joint-PhD with ZJU, Prof Xiaoye Miao
 - name: Qidong Liu
   photo: qidongliu.jpg
   info: Join our lab in 2022
   email: qidongliu2-c@my.cityu.edu.hk
   number_educ: 1
-  education1: PhD joint with XJTU, Prof Feng Tian
+  education1: Joint-PhD with XJTU, Prof Feng Tian
