--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -10,17 +10,17 @@
   number_educ: 0
 - name: Zhiwei Hu
   photo: zhiweihu.jpg
-  info:
+  info: MS 2021-2022
   email:
   number_educ: 0
 - name: Ze Huang
   photo: zehuang.jpg
-  info:
+  info: MS 2021-2022
   email:
   number_educ: 0
 - name: Jiahao Liang
   photo: jiahaoliang.jpg
-  info:
+  info: MS 2021-2022
   email: jiahliang6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Xinxin Gong
@@ -30,6 +30,6 @@
   number_educ: 0
 - name: Jiahao Dong
   photo: jiahaodong.jpg
-  info:
+  info: MS 2021-2022, next position - HKAFIT
   email:
   number_educ: 0
