--- a/_data/advisors.yml
+++ b/_data/advisors.yml
@@ -1,5 +1,5 @@
 - name: Xiangyu Zhao
   photo: xiangyuzhao.jpg
-  info: Assistant Professor
+  info: Lab Director
   email: xianzhao@cityu.edu.hk
   number_educ: 0
