--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -10,7 +10,7 @@
   number_educ: 0
 - name: Chi Zhang
   photo: chizhang.jpg
-  info: PhD at HEU, with Dr Rui Chen and Prof Qilong Han
+  info: PhD at HEU, with Prof Rui Chen and Prof Qilong Han
   email: zhangchi20@hrbeu.edu.cn
   number_educ: 0
 - name: Xinhang Li
