--- a/_data/advisors.yml
+++ b/_data/advisors.yml
@@ -3,4 +3,8 @@
   info: Lab Director
   email: xianzhao@cityu.edu.hk
   number_educ: 0
-  homepage: https://zhaoxyai.github.io/
+  website: https://zhaoxyai.github.io/
+  scholar: 0
+  linkedin: 0
+  twitter: 0
+  github: 0
