--- a/_data/advisors.yml
+++ b/_data/advisors.yml
@@ -4,7 +4,7 @@
   email: xianzhao@cityu.edu.hk
   number_educ: 0
   website: https://zhaoxyai.github.io/
-  scholar: 0
-  linkedin: 0
+  scholar: https://scholar.google.com/citations?user=Nkm9r2IAAAAJ
+  linkedin: https://linkedin.com/in/zhaoxiangyu
   twitter: 0
   github: 0
