--- a/_data/advisors.yml
+++ b/_data/advisors.yml
@@ -6,5 +6,5 @@
   website: https://zhaoxyai.github.io/
   scholar: https://scholar.google.com/citations?user=Nkm9r2IAAAAJ
   linkedin: https://linkedin.com/in/zhaoxiangyu
-  twitter: 0
-  github: 0
+  twitter:
+  github:
