--- a/_data/advisors.yml
+++ b/_data/advisors.yml
@@ -1,7 +1,7 @@
 - name: Xiangyu Zhao
   photo: xiangyuzhao.jpg
   info: Lab Director
-  email: xianzhao@cityu.edu.hk
+  email: xy.zhao@cityu.edu.hk
   number_educ: 0
   website: https://zhaoxyai.github.io/
   scholar: https://scholar.google.com/citations?user=Nkm9r2IAAAAJ
