update website link

--- a/_data/phd20.yml
+++ b/_data/phd20.yml
@@ -4,9 +4,11 @@
   email: ziruliu2-c@my.cityu.edu.hk
   number_educ: 1
   education1: with Prof Dingxuan Zhou (USYD)
+  website: https://lzr-s.github.io/
 - name: Langming Liu
   photo: langmingliu.jpg
   info: Join AML lab in 2022
   email: langmiliu2-c@my.cityu.edu.hk
   number_educ: 1
   education1: with Prof Dingxuan Zhou (USYD)
+  website: https://ming429778.github.io/
