--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -8,6 +8,7 @@
   info: PhD at UTS, with Prof Guandong Xu
   email: haoran.yang-2@student.uts.edu.au
   number_educ: 0
+  website: https://haoran-young.github.io/
 - name: Chi Zhang
   photo: chizhang.jpg
   info: PhD at HEU, with Prof Rui Chen and Prof Qilong Han
