--- a/_data/phd20.yml
+++ b/_data/phd20.yml
@@ -1,13 +1,13 @@
 - name: Ziru Liu
   photo: ziruliu.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Fall
   email: ziruliu2-c@my.cityu.edu.hk
   number_educ: 1
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://lzr-s.github.io/
 - name: Langming Liu
   photo: langmingliu.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Fall
   email: langmiliu2-c@my.cityu.edu.hk
   number_educ: 1
   education1: with Prof Dingxuan Zhou (USYD)
