--- a/_data/phd21.yml
+++ b/_data/phd21.yml
@@ -1,34 +1,34 @@
 - name: Maolin Wang
   photo: maolinwang.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Fall
   email: Morin.wang@my.cityu.edu.hk
   number_educ: 1
   education1: with Prof Junhui Wang (CUHK), and Dr Ruocheng Guo
   website: https://morin.wang
 - name: Xiao Han
   photo: xiaohan.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Fall
   email: xhan49-c@my.cityu.edu.hk
   number_educ: 1
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://www.hahahenha.net/alpha-test/CV/index_ENG.html
 - name: Zijian Zhang
   photo: zijianzhang.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Spring
   email: zijian.zhang@my.cityu.edu.hk
   number_educ: 1
   education1: Joint-PhD with JLU, Prof Hongwei Zhao
   website: https://zhangzj2114.github.io/
 - name: Qidong Liu
   photo: qidongliu.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Fall
   email: qidongliu2-c@my.cityu.edu.hk
   number_educ: 1
   education1: Joint-PhD with XJTU, Prof Feng Tian
   website: https://liuqidong07.github.io/
 - name: Wei Ni
   photo: weini.jpg
-  info: Join AML lab in 2023
+  info: Join AML lab in 23Fall
   email: 12121061@zju.edu.cn
   number_educ: 1
   education1: Joint-PhD with ZJU, Prof Xiaoye Miao
