--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -1,13 +1,13 @@
 - name: Yejing Wang
   photo: yejingwang.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Spring
   email: yejing.wang@my.cityu.edu.hk
   number_educ: 1
   education1: BS from USTC, School of Gifted Young
   website: https://dave-adamswang.github.io/
 - name: Jingtong Gao
   photo: jingtonggao.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Summer
   email: jt.g@my.cityu.edu.hk
   number_educ: 2
   education1: BS from BUAA
@@ -15,14 +15,14 @@
   website: https://gaojingtong.github.io/
 - name: Yuhao Wang
   photo: yuhaowang.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Summer
   email: yhwang25-c@my.cityu.edu.hk
   number_educ: 1
   education1: BS from XJTU
   website: https://wyhwhy.github.io/
 - name: Yuanshao Zhu
   photo: yuanshaozhu.jpg
-  info: Join AML lab in 2022
+  info: Join AML lab in 22Fall
   email: yuanshzhu2-c@my.cityu.edu.hk
   number_educ: 1
   education1: Joint-PhD with SusTech, Prof James J.Q. Yu
