--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -1,6 +1,6 @@
 - name: Pengyue Jia
   photo: pengyuejia.jpg
-  info: Will join AML lab in 2023
+  info: Join AML lab in 23Spring
   email: jiapengyue@zju.edu.cn
   number_educ: 2
   education1: BS from ZJU
@@ -8,7 +8,7 @@
   website: https://blog.jiapy.space/CV/
 - name: Xiaopeng Li
   photo: xiaopengli.jpg
-  info: Will join AML lab in 2023
+  info: Join AML lab in 23Spring
   email: lixiaopeng2019@gmail.com
   number_educ: 1
   education1: BS & MS from XJTU
