--- a/_data/phd21.yml
+++ b/_data/phd21.yml
@@ -1,6 +1,6 @@
 - name: Maolin Wang
   photo: maolinwang.jpg
-  info: Join AML lab in 22Fall
+  info: Join AML lab in 22Summer
   email: Morin.wang@my.cityu.edu.hk
   number_educ: 1
   education1: with Prof Junhui Wang (CUHK), and Dr Ruocheng Guo
