--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 19 Nov 2022
+  headline: "<b>Zijian and Chunxu's paper AutoSTL got accepted by AAAI23. Congratulations!</b>!"
+
 - date: 25 Oct 2022
   headline: "<b>Welcome ！ — our lab website is officially starting</b>!"
 
