--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 06 Dec 2022
+  headline: "Our team won the Outstanding Project in CCF-Tencent Open Fund, congratulations to team members Yejing and Qidong!"
+
 - date: 19 Nov 2022
   headline: "Zijian and Chunxu's paper AutoSTL got accepted by AAAI23. Congratulations!"
 
