--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,13 @@
 - date: Dec 2022
+  headline: "Our team is honored to receive the CCF-Ant Research Fund (CCF-蚂蚁科研基金)"
+
+- date: Dec 2022
+  headline: "We will provide a tutorial of AutoML for Deep Recommender Systems @ WSDM'23"
+
+- date: Dec 2022
+  headline: "We will provide a tutorial of Trustworthy Recommender Systems @ WWW'23"
+
+- date: Dec 2022
   headline: "Our team won the Outstanding Project (8/34) in CCF-Tencent Open Fund, congratulations to team members Yejing and Qidong!"
 
 - date: Nov 2022
