update new ms members

--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -1,7 +1,7 @@
 - name: Jie Wang
   photo: jiewang.jpg
   info:
-  email:
+  email: jwang998-c@my.cityu.edu.hk
   number_educ: 0
 - name: Bo Li
   photo: boli.jpg
