update new ms members

--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -42,7 +42,7 @@
 - name: Yan Zhang
   photo: yanzhang.jpg
   info: MS at ZJUT, with Prof Guojiang Shen
-  email:
+  email: nameyzhang@gmail.com
   number_educ: 0
 - name: Muyang Li
   photo: muyangli.jpg
