update new ms members

--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -33,3 +33,13 @@
   info:
   email: jiaocwang2-c@my.cityu.edu.hk
   number_educ: 0
+- name: Jie Wang
+  photo: jiewang.jpg
+  info:
+  email: jwang998-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Bo Li
+  photo: boli.jpg
+  info:
+  email: boli77-c@my.cityu.edu.hk
+  number_educ: 0
