update members' email

--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -1,7 +1,7 @@
 - name: Pengyue Jia
   photo: pengyuejia.jpg
   info: Join AML lab in 23Spring
-  email: jiapengyue@zju.edu.cn
+  email: jia.pengyue@my.cityu.edu.hk
   number_educ: 2
   education1: BS from ZJU
   education2: MS from HKU
@@ -9,7 +9,7 @@
 - name: Xiaopeng Li
   photo: xiaopengli.jpg
   info: Join AML lab in 23Spring
-  email: lixiaopeng2019@gmail.com
+  email: xiaopli2-c@my.cityu.edu.hk
   number_educ: 1
   education1: BS & MS from XJTU
   website: https://xiaopengli1.github.io/XiaopengLi/
