update news and publications

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: Jan 2023
+  headline: "Eight of our papers got accept by WWW'23. Congratulations!"
+
+- date: Jan 2023
+  headline: "We will co-organize the DLP workshop @ KDD'23"
+
 - date: Dec 2022
   headline: "Our team is honored to receive the CCF-Ant Research Fund (CCF-蚂蚁科研基金)"
 
