--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -5,7 +5,7 @@
   number_educ: 2
   education1: BS from ZJU
   education2: MS from HKU
-  website: https://blog.jiapy.space/CV/
+  website: https://jia-py.github.io
 - name: Xiaopeng Li
   photo: xiaopengli.jpg
   info: Join AML lab in 23Spring
