updating our new member

--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -43,3 +43,8 @@
   info:
   email: boli77-c@my.cityu.edu.hk
   number_educ: 0
+- name: Yinliang Kang
+  photo: yinliangkang.jpg
+  info:
+  email: yinlikang2-c@my.cityu.edu.hk
+  number_educ: 0
