--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: Feb 2023
+  headline: "Our new survey <a href=https://arxiv.org/abs/2302.03525>Multi-Task Deep Recommender Systems: A Survey</a> is online"
+
+- date: Feb 2023
+  headline: "Our new survey <a href=https://arxiv.org/abs/2302.03883>Multimodal Recommender Systems: A Survey</a> is online"
+
 - date: Jan 2023
   headline: "Eight of our papers got accept by WWW'23. Congratulations!"
 
