--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -5,7 +5,7 @@
   number_educ: 0
 - name: Weilin Lin
   photo: weilinlin.jpg
-  info: MS 2021-2022, next position - HKUST GZ
+  info: MS 2021-2022, next position - PhD at HKUST GZ
   email: wllin9-c@my.cityu.edu.hk
   number_educ: 0
 - name: Zhiwei Hu
@@ -20,7 +20,7 @@
   number_educ: 0
 - name: Jiahao Liang
   photo: jiahaoliang.jpg
-  info: MS 2021-2022
+  info: MS 2021-2022, next position - HKU
   email: jiahliang6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Xinxin Gong
