--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -1,47 +1,47 @@
 - name: Zhi Zheng
   photo: zhizheng.jpg
-  info: PhD at USTC, with Prof Tong Xu
+  info: PhD at USTC, with Prof Tong Xu, RA in 2021-2022
   email:
   number_educ: 0
 - name: Haoran Yang
   photo: haoranyang.jpg
-  info: PhD at UTS, with Prof Guandong Xu
+  info: PhD at UTS, with Prof Guandong Xu, RA in 2022-2023
   email: haoran.yang-2@student.uts.edu.au
   number_educ: 0
   website: https://haoran-young.github.io/
 - name: Chi Zhang
   photo: chizhang.jpg
-  info: PhD at HEU, with Prof Rui Chen and Prof Qilong Han
+  info: PhD at HEU, with Prof Rui Chen and Prof Qilong Han, RA in 2022
   email: zhangchi20@hrbeu.edu.cn
   number_educ: 0
 - name: Xinhang Li
   photo: xinhangli.jpg
-  info: PhD at Tsinghua, with Prof Chunxiao Xing and Prof Yong Zhang
+  info: PhD at Tsinghua, with Prof Chunxiao Xing and Prof Yong Zhang, RA in 2022-2023
   email: xh-li20@mails.tsinghua.edu.cn
   number_educ: 0
 - name: Jialin Liu
   photo: jialinliu.jpg
-  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo
+  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, RA in 2023
   email: jLliu@cnic.cn
   number_educ: 0
 - name: Chunxu Zhang
   photo: chunxuzhang.jpg
-  info: PhD at JLU
+  info: PhD at JLU, RA in 2022-2023
   email: cxzhang19@mails.jlu.edu.cn
   number_educ: 0
 - name: Jie Cai
   photo: jiecai.jpg
-  info: MS at Tsinghua, with Prof Wenwu Zhu
+  info: MS at Tsinghua, with Prof Wenwu Zhu, RA in 2022
   email: caij20@mails.tsinghua.edu.cn
   number_educ: 0
 - name: Jiajun Zhou
   photo: jiajunzhou.jpg
-  info: MS at ZJUT, with Prof Qi Xuan
+  info: MS at ZJUT, with Prof Qi Xuan, RA in 2022
   email: jjzhou1202@gmail.com
   number_educ: 0
 - name: Yan Zhang
   photo: yanzhang.jpg
-  info: MS at ZJUT, with Prof Guojiang Shen
+  info: MS at ZJUT, with Prof Guojiang Shen, RA in 2022
   email: nameyzhang@gmail.com
   number_educ: 0
 - name: Muyang Li
