--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -5,28 +5,28 @@
   number_educ: 0
 - name: Haoran Yang
   photo: haoranyang.jpg
-  info: PhD at UTS, with Prof Guandong Xu, RA in 2022-2023
+  info: PhD at UTS, with Prof Guandong Xu, RA in 2022-Now
   email: haoran.yang-2@student.uts.edu.au
   number_educ: 0
   website: https://haoran-young.github.io/
 - name: Chi Zhang
   photo: chizhang.jpg
-  info: PhD at HEU, with Prof Rui Chen and Prof Qilong Han, RA in 2022
+  info: PhD at HEU, with Prof Rui Chen and Prof Qilong Han, RA in 2022-Now
   email: zhangchi20@hrbeu.edu.cn
   number_educ: 0
 - name: Xinhang Li
   photo: xinhangli.jpg
-  info: PhD at Tsinghua, with Prof Chunxiao Xing and Prof Yong Zhang, RA in 2022-2023
+  info: PhD at Tsinghua, with Prof Chunxiao Xing and Prof Yong Zhang, RA in 2022-Now
   email: xh-li20@mails.tsinghua.edu.cn
   number_educ: 0
 - name: Jialin Liu
   photo: jialinliu.jpg
-  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, RA in 2023
+  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, RA in 2023-Now
   email: jLliu@cnic.cn
   number_educ: 0
 - name: Chunxu Zhang
   photo: chunxuzhang.jpg
-  info: PhD at JLU, RA in 2022-2023
+  info: PhD at JLU, RA in 2022-Now
   email: cxzhang19@mails.jlu.edu.cn
   number_educ: 0
 - name: Jie Cai
@@ -46,7 +46,7 @@
   number_educ: 0
 - name: Muyang Li
   photo: muyangli.jpg
-  info: BS at University of Auckland, RA in 2021, next position - PhD at USYD
+  info: BS at University of Auckland, RA in 2021-2022, next position - PhD at USYD
   email:
   number_educ: 0
 - name: Chuan Lyu
