--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -8,12 +8,12 @@
   info: MS 2021-2022, next position - PhD at HKUST GZ
   email: wllin9-c@my.cityu.edu.hk
   number_educ: 0
-- name: Zhiwei Hu
+- name: Zhiwei Hu, next position - on market
   photo: zhiweihu.jpg
   info: MS 2021-2022
   email:
   number_educ: 0
-- name: Ze Huang
+- name: Ze Huang, next position - Shokz
   photo: zehuang.jpg
   info: MS 2021-2022
   email:
