--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -1,11 +1,11 @@
 - name: Zhi Zheng
   photo: zhizheng.jpg
-  info: PhD at USTC, with Prof Tong Xu, RA in 2021-2022
+  info: PhD at USTC, with Prof Tong Xu, Online RA in 2021-2022
   email:
   number_educ: 0
 - name: Haoran Yang
   photo: haoranyang.jpg
-  info: PhD at UTS, with Prof Guandong Xu, RA in 2022-Now
+  info: PhD at UTS, with Prof Guandong Xu, Online RA in 2022-Now
   email: haoran.yang-2@student.uts.edu.au
   number_educ: 0
   website: https://haoran-young.github.io/
@@ -16,42 +16,42 @@
   number_educ: 0
 - name: Xinhang Li
   photo: xinhangli.jpg
-  info: PhD at Tsinghua, with Prof Chunxiao Xing and Prof Yong Zhang, RA in 2022-Now
+  info: PhD at Tsinghua, with Prof Chunxiao Xing and Prof Yong Zhang, Online RA in 2022-Now
   email: xh-li20@mails.tsinghua.edu.cn
   number_educ: 0
 - name: Jialin Liu
   photo: jialinliu.jpg
-  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, RA in 2023-Now
+  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, Visiting Student in 2023-Now
   email: jLliu@cnic.cn
   number_educ: 0
 - name: Chunxu Zhang
   photo: chunxuzhang.jpg
-  info: PhD at JLU, RA in 2022-Now
+  info: PhD at JLU, Visiting Student in 2022-Now
   email: cxzhang19@mails.jlu.edu.cn
   number_educ: 0
 - name: Jie Cai
   photo: jiecai.jpg
-  info: MS at Tsinghua, with Prof Wenwu Zhu, RA in 2022
+  info: MS at Tsinghua, with Prof Wenwu Zhu, Online RA in 2022
   email: caij20@mails.tsinghua.edu.cn
   number_educ: 0
 - name: Jiajun Zhou
   photo: jiajunzhou.jpg
-  info: MS at ZJUT, with Prof Qi Xuan, RA in 2022
+  info: MS at ZJUT, with Prof Qi Xuan, Visiting Student in 2022
   email: jjzhou1202@gmail.com
   number_educ: 0
 - name: Yan Zhang
   photo: yanzhang.jpg
-  info: MS at ZJUT, with Prof Guojiang Shen, RA in 2022
+  info: MS at ZJUT, with Prof Guojiang Shen, Visiting Student in 2022
   email: nameyzhang@gmail.com
   number_educ: 0
 - name: Muyang Li
   photo: muyangli.jpg
-  info: BS at University of Auckland, RA in 2021-2022, next position - PhD at USYD
+  info: BS at University of Auckland, Online RA in 2021-2022, next position - PhD at USYD
   email:
   number_educ: 0
 - name: Chuan Lyu
   photo: chuanlyu.jpg
-  info: BS at ZJU, RA in 2021, next position - PhD at ZJU
+  info: BS at ZJU, Online RA in 2021, next position - PhD at ZJU
   email:
   number_educ: 0
 
