--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -8,14 +8,14 @@
   info: MS 2021-2022, next position - PhD at HKUST GZ
   email: wllin9-c@my.cityu.edu.hk
   number_educ: 0
-- name: Zhiwei Hu, next position - on market
+- name: Zhiwei Hu
   photo: zhiweihu.jpg
-  info: MS 2021-2022
+  info: MS 2021-2022, next position - on market
   email:
   number_educ: 0
-- name: Ze Huang, next position - Shokz
+- name: Ze Huang
   photo: zehuang.jpg
-  info: MS 2021-2022
+  info: MS 2021-2022, next position - Shokz
   email:
   number_educ: 0
 - name: Jiahao Liang
