Update publications and news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: Apr 2023
-  headline: "Four of our papers got accept by SIGIR'23. Congratulations!"
+  headline: "Seven of our papers got accept by SIGIR'23. Congratulations!"
 
 - date: Feb 2023
   headline: "Our new survey <a href='https://arxiv.org/abs/2302.03525'>Multi-Task Deep Recommender Systems: A Survey</a> is online"
