Update publications and news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,10 @@
 - date: Apr 2023
+  headline: "We will provide two tutorials about Joint Modeling in Recommendations and Trustworthy Recommender Systems @ IJCAI'23"
+
+- date: Apr 2023
+  headline: "Our paper 'Adversarial Attacks for Black-box Recommender Systems via Copying Transferable Cross-domain User Profiles' is accepted by TKDE. Congratulations!"
+
+- date: Apr 2023
   headline: "Seven of our papers (5 full & 2 short) got accept by SIGIR'23. Congratulations!"
 
 - date: Feb 2023
