--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: May 2023
+  headline: "Our new tutorial (Trustworthy RS) got accepted by KDD'23. Congratulations!"
+
+- date: May 2023
+  headline: "Congratulations to our team for winning the Silver Medal at the International Exhibition of Inventions Geneva"
+
 - date: Apr 2023
   headline: "We will provide two tutorials about Joint Modeling in Recommendations and Trustworthy Recommender Systems @ IJCAI'23"
 
