update news and publications

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: May 2023
+  headline: "Two of our papers got accept by KDD'23. Congratulations!"
+
+- date: May 2023
   headline: "Our new tutorial (Trustworthy RS) got accepted by KDD'23. Congratulations!"
 
 - date: May 2023
