--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -20,7 +20,7 @@
   number_educ: 0
 - name: Jiahao Liang
   photo: jiahaoliang.jpg
-  info: MS 2021-2022, next position - HKU
+  info: MS 2021-2022, next position - PhD at SCUT
   email: jiahliang6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Xinxin Gong
