--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -46,7 +46,12 @@
   email: derongxu@mail.ustc.edu.cn
 - name: Yusheng Lu
   photo: yushenglu.jpg
+  info: Will join AML lab in 23Fall
   email: luyusheng@tongji.edu.cn
+  number_educ: 2
+  education1: Joint-PhD with Tongji, Prof. Yongrui Duan
+  education2: BS from Chongqing University
+  website: https://yushenglu94.github.io/
 - name: Dayan Pan
   photo: dayanpan.jpg
   email: dayan@buaa.edu.cn
