update team members

--- a/_data/phd20.yml
+++ b/_data/phd20.yml
@@ -12,3 +12,7 @@
   number_educ: 1
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://ming429778.github.io/
+- name: Guojing Li
+  photo: guojingli.jpg
+  info: Will join AML lab in 23Fall
+  email: alfredjameslee@ruc.edu.cn
