--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -28,31 +28,23 @@
   number_educ: 1
   education1: BS & MS from NWPU
   website: https://wlzhang2020.github.io/
-- name: Guojing Li
-  photo: guojingli.jpg
-  info: Will join AML lab in 23Fall
-  email: alfredjameslee@ruc.edu.cn
 - name: Siqi Lei
   photo: siqilei.jpg
   info: Will join AML lab in 23Fall
   email: leisiqi@mail.ustc.edu.cn
   website: http://home.ustc.edu.cn/~leisiqi/
+- name: Derong Xu
+  photo: derongxu.jpg
+  email: derongxu@mail.ustc.edu.cn
+  number_educ: 2
+  education1: Joint PhD student with USTC, Prof.Enhong Chen and Prof.Tong Xu
+  education2: BS from Xidian University
+  website: https://quqxui.github.io/
+- name: Dayan Pan
+  photo: dayanpan.jpg
+  email: dayan@buaa.edu.cn
 - name: Jiawei Cheng
   photo: jiaweicheng.jpg
   info: Will join AML lab in 24Fall
   email: JarvisC@buaa.edu.cn
-- name: Derong Xu
-  photo: derongxu.jpg
-  email: derongxu@mail.ustc.edu.cn
-- name: Yusheng Lu
-  photo: yushenglu.jpg
-  info: Will join AML lab in 23Fall
-  email: luyusheng@tongji.edu.cn
-  number_educ: 2
-  education1: Joint-PhD with Tongji, Prof. Yongrui Duan
-  education2: BS from Chongqing University
-  website: https://yushenglu94.github.io/
-- name: Dayan Pan
-  photo: dayanpan.jpg
-  email: dayan@buaa.edu.cn
 
