update team members

--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -37,7 +37,7 @@
   photo: derongxu.jpg
   email: derongxu@mail.ustc.edu.cn
   number_educ: 2
-  education1: Joint PhD student with USTC, Prof.Enhong Chen and Prof.Tong Xu
+  education1: Joint PhD student with USTC, Prof Enhong Chen and Prof Tong Xu
   education2: BS from Xidian University
   website: https://quqxui.github.io/
 - name: Dayan Pan
