update team members

--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -27,3 +27,7 @@
   number_educ: 1
   education1: Joint-PhD with SusTech, Prof James J.Q. Yu
   website: https://yasoz.github.io/
+- name: Jiawei Cheng
+  photo: jiaweicheng.jpg
+  info: Will join AML lab in 24Fall
+  email: JarvisC@buaa.edu.cn
