--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,12 @@
+- date: June 2023
+  headline: "Our paper STRec got accept by Recsys'23. Congratulations!"
+
+- date: June 2023
+  headline: "Three of our members receive travel grants from IJCAI'23."
+
+- date: June 2023
+  headline: "Three of our members are selected as volunteers for IJCAI'23."
+
 - date: May 2023
   headline: "2 of our papers got accept by KDD'23. Congratulations!"
 
