--- a/_data/phd21.yml
+++ b/_data/phd21.yml
@@ -28,7 +28,7 @@
   website: https://liuqidong07.github.io/
 - name: Wei Ni
   photo: weini.jpg
-  info: Join AML lab in 22Fall
+  info: Will join AML lab in 23Fall
   email: 12121061@zju.edu.cn
   number_educ: 1
   education1: Joint-PhD with ZJU, Prof Xiaoye Miao
