update team members

--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -31,3 +31,6 @@
   photo: jiaweicheng.jpg
   info: Will join AML lab in 24Fall
   email: JarvisC@buaa.edu.cn
+  number_educ: 2
+  education1: Joint-PhD with BUAA, Prof Jingyuan Wang
+  education2: BS from BUAA
