update team members

--- a/_data/phd20.yml
+++ b/_data/phd20.yml
@@ -16,3 +16,7 @@
   photo: guojingli.jpg
   info: Will join AML lab in 23Fall
   email: alfredjameslee@ruc.edu.cn
+  number_educ: 2
+  education1: BS in Beijing Normal University
+  education2: Joint-PhD with Renmin University, Prof Zhou Wenxia
+  website: https://alfredjamesli.github.io/AlfredJamesLi/
