--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -34,3 +34,4 @@
   number_educ: 2
   education1: Joint-PhD with BUAA, Prof Jingyuan Wang
   education2: BS from BUAA
+  website: https://jarvisorange.github.io/
