--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -21,12 +21,12 @@
   number_educ: 0
 - name: Jialin Liu
   photo: jialinliu.jpg
-  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, Visiting Student in 2023-Now
+  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, Visiting Student in 2023
   email: jLliu@cnic.cn
   number_educ: 0
 - name: Chunxu Zhang
   photo: chunxuzhang.jpg
-  info: PhD at JLU, Visiting Student in 2022-Now
+  info: PhD at JLU, Visiting Student in 2022-2023
   email: cxzhang19@mails.jlu.edu.cn
   number_educ: 0
 - name: Jie Cai
@@ -41,7 +41,7 @@
   number_educ: 0
 - name: Yan Zhang
   photo: yanzhang.jpg
-  info: MS at ZJUT, with Prof Guojiang Shen, Visiting Student in 2022
+  info: MS at ZJUT, with Prof Guojiang Shen, Visiting Student in 2022, next position - PhD at ZJU
   email: nameyzhang@gmail.com
   number_educ: 0
 - name: Muyang Li
